	(DONE) oneclick document opening
	(DONE) filter separating ex.: "*.c;*.cpp;*.h"
	* Fix possible memory leaks (using g_free... where is need)
	* Folowing path from current document view
	(DONE) Hide object files as native filebroser (*.o;*.a;*.so;*.dll;*.lib..)
	(DONE) Using font from geany settings for sidebar
	* Migrating to stash
	* Adding keybindings for renaming/deleting/refreshing


+-------------------------------+
| Development release ChangeLog |
+-------------------------------+

19-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added clear icon in filter // thanks to native filebrowser plugin
		using font from geany settings for sidebar  // thanks to native filebrowser plugin


17-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		added option to hide object files *.so;*.obj;*.so;*.dll;*.a;*.lib
		fixed a few warnings


14-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		strings cleanup
		(This is version 0.2, because the plugin become 2 months old :)


11-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed bug when turned off "On expand refresh"
		fixed runtime crytical warnings reported in http://nopaste.geany.org/p/m3f018a3e
			and thanks to Enrico for help with gdb :)
		added empty element when directory not filled, and changed default option values
			for "On expand refresh"


10-04-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed wrong root refresh on delete and create when objects are in toplevel
		some string changed in prefs dialog
		added option to close document if it is deleted from treebrowser
		highlighing addressbar if typed directory not exists
		make right click menu dynamic


31-03-2010 	Adrian Dimitrov 		<dimitrov.adrian@gmail.com>

	* src/treebrowser.c
		fixed saving state of Show the toolbars when starting Geany
		moving settings saving in separated function - save_settings()